--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/bottom-tabs": "^6.6.0",
     "react": "18.2.0",
     "react-native": "0.74.3",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-vector-icons": "^10.1.0"
   },
   "devDependencies": {
